fixed validation for new repair_regions

--- a/src/Notebooks/2_Repair/4.0_Repair_Precipitacao.ipynb
+++ b/src/Notebooks/2_Repair/4.0_Repair_Precipitacao.ipynb
@@ -12,7 +12,8 @@
     "import imp\n",
     "import utils\n",
     "imp.reload(utils)\n",
-    "from utils import *"
+    "from utils import *\n",
+    "from datetime import timedelta"
    ]
   },
   {
@@ -33,6 +34,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Select Precipitacao Columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -40,8 +48,15 @@
    "source": [
     "precipitacao_cols =  [c for c in ip.columns if 'Precipitacao' in c ]\n",
     "local_cols =  [c for c in ip.columns if 'Local' in c ]\n",
-    "df_p = ip[ ['Data_Hora'] + local_cols + precipitacao_cols]\n",
-    "df_p.loc[:, 'Data_Hora'] = pd.to_datetime(df_p.loc[:,'Data_Hora'], yearfirst=True).copy()"
+    "df_p = ip[ ['Data_Hora'] + local_cols + precipitacao_cols].copy()\n",
+    "df_p.loc[:, 'Data_Hora'] = pd.to_datetime(df_p.loc[:,'Data_Hora'], yearfirst=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trying different mothods to find error regions"
    ]
   },
   {
@@ -247,6 +262,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using Utils derivative to get error regions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -261,7 +283,8 @@
     "for col in precipitacao_cols:\n",
     "    \n",
     "    # Derivative\n",
-    "    peaks = derivative_threshold(df_p[col], 30, False, start, stop, lw = 2, figsize = (11, 15))\n",
+    "    peaks = derivative_threshold(df_p[col], 30, False, start, stop, lw = 2,\n",
+    "                                 figsize = (11, 15))\n",
     "    # Consecutive Zeros\n",
     "    zeros = derivative_zero(df_p[col].fillna(0), n_days*24*4, False,\n",
     "                             plot = False, plt_start = start, plt_stop = stop)\n",
@@ -283,6 +306,13 @@
     "    except:\n",
     "        df_p.drop(columns = [col+'_error'], inplace = True)\n",
     "        df_p.insert(df_p.shape[1], col+'_error', error.copy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot error regions"
    ]
   },
   {
@@ -344,13 +374,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "est = pd.read_csv('../../../data/cleandata/Estacoes/lat_lng_estacoes.csv', sep = ';')\n",
-    "est = est.iloc[:-1, :]"
+    "### Read Estacao Lat and Lng"
    ]
   },
   {
@@ -359,6 +386,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "est = pd.read_csv('../../../data/cleandata/Estacoes/lat_lng_estacoes.csv', sep = ';')\n",
+    "est = est.iloc[:-1, :]\n",
     "est = est.set_index('Estacao')"
    ]
   },
@@ -368,6 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculate distance between 2 points in km\n",
     "def Calculate_Dist(lat1, lon1, lat2, lon2):\n",
     "    r = 6371\n",
     "    phi1 = np.radians(lat1)\n",
@@ -379,44 +409,8 @@
     "    res = r * (2 * np.arctan2(np.sqrt(a), np.sqrt(1 - a)))\n",
     "    return np.round(res, 2)\n",
     "\n",
-    "def get_distances(estacoes, ord_serv):\n",
-    "    for index, row in ord_serv.iterrows():\n",
-    "        dist = estacoes.apply(lambda x: \n",
-    "                           Calculate_Dist(row['lat'], row['lng'],\n",
-    "                                            x['lat'],   x['lng']),\n",
-    "                           axis=1)\n",
-    "        ord_serv.loc[index,'Distance'], arg = dist.min(), dist.argmin()\n",
-    "        ord_serv.loc[index,'Est. Prox'] = estacoes.iloc[arg,0]\n",
-    "\n",
-    "    return ord_serv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "estacoes = list(est.index)\n",
-    "\n",
-    "distances = {k: {} for k in estacoes}  \n",
-    "\n",
-    "for estacao in estacoes:\n",
-    "    \n",
-    "    rest = [c for c in est.index if c != estacao]\n",
-    "    \n",
-    "    for r in rest:\n",
-    "        distances[estacao][r] = Calculate_Dist(*est.loc[estacao,:].to_list(),\\\n",
-    "                                               *est.loc[r,:].to_list())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def interpolate_rain( row , num , distances):\n",
+    "# Interpolate based on distance\n",
+    "def interpolate_rain( row ,num ,distances):\n",
     "   \n",
     "    rest = [i for i in range(5) if i != num]\n",
     "    row = row.fillna(0)\n",
@@ -440,31 +434,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate distance between every station"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estacoes = list(est.index)\n",
+    "\n",
+    "distances = {k: {} for k in estacoes}  \n",
+    "\n",
+    "for estacao in estacoes:\n",
+    "    \n",
+    "    rest = [c for c in est.index if c != estacao]\n",
+    "    for r in rest:\n",
+    "        distances[estacao][r] = Calculate_Dist(*est.loc[estacao,:].to_list(),\\\n",
+    "                                               *est.loc[r,:].to_list())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply Interpolate distance - Inverse Distance Weighting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(5):\n",
-    "    print(i+1,'/5',)\n",
+    "    print(i+1,'/5 - ',df_p[f'Precipitacao_{i}_error'].sum())\n",
     "    df_p.loc[df_p[f'Precipitacao_{i}_error'], f'Precipitacao_{i}'] = \\\n",
     "             df_p[df_p[f'Precipitacao_{i}_error']].apply(interpolate_rain,\n",
     "                                                         args = (i, distances), axis = 1 ).copy()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### See how many left"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df_p.isna().sum()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot Interpolated rain"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "py.offline.init_notebook_mode()\n",
@@ -503,13 +547,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "for i in range(5):\n",
-    "    df_p.insert(df_p.shape[1], f'Precipitacao_b4_ow_{i}', df_p[f'Precipitacao_{i}'].copy())"
+    "### Copy rain column to see results after\n"
    ]
   },
   {
@@ -518,8 +559,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import timedelta\n",
-    "\n",
+    "for i in range(5):\n",
+    "    df_p.insert(df_p.shape[1], f'Precipitacao_b4_ow_{i}',\n",
+    "                df_p[f'Precipitacao_{i}'].copy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fill remaining based on OpenWeather data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def fill_ow( row , num , df_ow):\n",
     "   \n",
     "    rounded_hour = row['Data_Hora'].round('H')\n",
@@ -532,6 +589,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import OpenWeather data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -540,6 +604,13 @@
     "df_ow = pd.read_csv('../../../data/cleandata/OpenWeather/history_bulk.csv', sep = ';' )\n",
     "df_ow['Data_Hora'] = pd.to_datetime(df_ow['Data_Hora'], yearfirst = True)\n",
     "df_ow = df_ow.drop_duplicates(subset = 'Data_Hora' )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply fill_ow\n"
    ]
   },
   {
@@ -557,12 +628,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check remaining"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_p.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plots Results"
    ]
   },
   {
@@ -614,6 +699,219 @@
     "            connectgaps=False\n",
     "                                ),\n",
     "                      row = i + 1, col = 1\n",
+    "                     )\n",
+    "    \n",
+    "fig.update_layout(height=1200, width=800)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compare with script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repaired = pd.read_csv('../../../data/cleandata/Info pluviometricas/Merged Data/repaired.csv',\n",
+    "                       sep = ';')\n",
+    "\n",
+    "regions = pd.read_csv('../../../data/cleandata/Info pluviometricas/Merged Data/error_regions.csv',\n",
+    "                       sep = ';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prep_cols = ['Data_Hora'] + [c for c in regions.columns if  'Precipitacao' in c]\n",
+    "regions = regions.loc[:, prep_cols]\n",
+    "regions['Data_Hora'] = pd.to_datetime(regions['Data_Hora'], yearfirst = True)\n",
+    "regions.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prep_cols = ['Data_Hora'] + [c for c in repaired.columns if  'Precipitacao' in c]\n",
+    "repaired = repaired.loc[:, prep_cols]\n",
+    "repaired['Data_Hora'] = pd.to_datetime(repaired['Data_Hora'], yearfirst = True)\n",
+    "repaired.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Error Regions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "py.offline.init_notebook_mode()\n",
+    "fig = make_subplots(5,2, shared_xaxes=True, shared_yaxes=True )\n",
+    "\n",
+    "ano = 2013\n",
+    "\n",
+    "ip_ano = df_p[df_p['Data_Hora'].dt.year == ano]\n",
+    "rip_ano = regions[regions['Data_Hora'].dt.year == ano]\n",
+    "color = ['#c62828', '#283593', '#00685b', '#f9a825', '#009688']\n",
+    "\n",
+    "for i, col in enumerate(precipitacao_cols):\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x = ip_ano['Data_Hora'],\n",
+    "        y = ip_ano[col].fillna(0),\n",
+    "        showlegend = False,\n",
+    "        legendgroup=col,\n",
+    "        line = dict(color='#616161'),\n",
+    "        connectgaps=False\n",
+    "                            ),\n",
+    "                  row = i + 1, col = 1\n",
+    "                 )\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x = ip_ano['Data_Hora'],\n",
+    "        y = ip_ano[col].fillna(0),\n",
+    "        showlegend = False,\n",
+    "        legendgroup=col,\n",
+    "        line = dict(color='#616161'),\n",
+    "        connectgaps=False\n",
+    "                            ),\n",
+    "                  row = i + 1, col = 2\n",
+    "                 )\n",
+    "\n",
+    "    \n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x = ip_ano['Data_Hora'],\n",
+    "        y = ip_ano[col].fillna(0).where(ip_ano[col+'_error']),\n",
+    "        name = col,\n",
+    "        legendgroup=col,\n",
+    "        showlegend = False,\n",
+    "        line = dict(color='#c62828', width = 4),\n",
+    "        connectgaps=False\n",
+    "                            ),\n",
+    "                  row = i + 1, col = 1\n",
+    "                 )\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x = rip_ano['Data_Hora'],\n",
+    "        y = ip_ano[col].fillna(0).where(rip_ano[col+'_error']),\n",
+    "        name = col,\n",
+    "        legendgroup=col,\n",
+    "        showlegend = False,\n",
+    "        line = dict(color='#c62828', width = 4),\n",
+    "        connectgaps = False\n",
+    "                            ),\n",
+    "                  row = i + 1, col = 2\n",
+    "                 )\n",
+    "    \n",
+    "fig.update_layout(height=1200, width=800)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Repaired Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "py.offline.init_notebook_mode()\n",
+    "fig = make_subplots(5,2, shared_xaxes=True, shared_yaxes=True )\n",
+    "\n",
+    "ano = 2013\n",
+    "\n",
+    "ip_ano = df_p[df_p['Data_Hora'].dt.year == ano]\n",
+    "rip_ano = repaired[repaired['Data_Hora'].dt.year == ano]\n",
+    "color = ['#c62828', '#283593', '#00685b', '#f9a825', '#009688']\n",
+    "\n",
+    "for i, col in enumerate(precipitacao_cols):\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x = ip_ano['Data_Hora'],\n",
+    "        y = ip_ano[col].fillna(0),\n",
+    "        showlegend = False,\n",
+    "        legendgroup=col,\n",
+    "        line = dict(color='#616161'),\n",
+    "        connectgaps=False\n",
+    "                            ),\n",
+    "                  row = i + 1, col = 1\n",
+    "                 )\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x = rip_ano['Data_Hora'],\n",
+    "        y = rip_ano[col].fillna(0),\n",
+    "        showlegend = False,\n",
+    "        legendgroup=col,\n",
+    "        line = dict(color='#616161'),\n",
+    "        connectgaps=False\n",
+    "                            ),\n",
+    "                  row = i + 1, col = 2\n",
+    "                 )\n",
+    "\n",
+    "    \n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x = ip_ano['Data_Hora'],\n",
+    "        y = ip_ano[col].fillna(0).where(ip_ano[col+'_error'] &\n",
+    "                                        ~ip_ano[f'Precipitacao_b4_ow_{i}'].isna()),\n",
+    "        name = col,\n",
+    "        legendgroup=col,\n",
+    "        showlegend = False,\n",
+    "        line = dict(color='#c62828', width = 4),\n",
+    "        connectgaps=False\n",
+    "                            ),\n",
+    "                  row = i + 1, col = 1\n",
+    "                 )\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x = rip_ano['Data_Hora'],\n",
+    "        y = rip_ano[col].fillna(0).where(rip_ano[col+'_idw']),\n",
+    "        name = col,\n",
+    "        legendgroup=col,\n",
+    "        showlegend = False,\n",
+    "        line = dict(color='#c62828', width = 4),\n",
+    "        connectgaps = False\n",
+    "                            ),\n",
+    "                  row = i + 1, col = 2\n",
+    "                 )\n",
+    "    \n",
+    "    \n",
+    "    fig.add_trace(go.Scatter(\n",
+    "            x = ip_ano['Data_Hora'],\n",
+    "            y = ip_ano[col].where(ip_ano[f'Precipitacao_b4_ow_{i}'].isna()),\n",
+    "            name = col,\n",
+    "            legendgroup=col,\n",
+    "            showlegend = False,\n",
+    "            line = dict(color='#0398fc', width = 4),\n",
+    "            connectgaps=False\n",
+    "                                ),\n",
+    "                      row = i + 1, col = 1\n",
+    "                     )\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "            x = rip_ano['Data_Hora'],\n",
+    "            y = rip_ano[col].where(rip_ano[col + '_fill_ow']),\n",
+    "            name = col,\n",
+    "            legendgroup=col,\n",
+    "            showlegend = False,\n",
+    "            line = dict(color='#0398fc', width = 4),\n",
+    "            connectgaps=False\n",
+    "                                ),\n",
+    "                      row = i + 1, col = 2\n",
     "                     )\n",
     "    \n",
     "fig.update_layout(height=1200, width=800)\n",
