include wind filter and remove wind idw interpolation

--- a/src/Notebooks/4_Modeling/5.2_Predict_Rain_selected_features.ipynb
+++ b/src/Notebooks/4_Modeling/5.2_Predict_Rain_selected_features.ipynb
@@ -41,7 +41,7 @@
     "sys.path.append('../../Pipeline')\n",
     "\n",
     "from ml_utils import *\n",
-    "from utils import moving_average, reverse_mod\n"
+    "from utils import *\n"
    ]
   },
   {
@@ -132,6 +132,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Vento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://snowfence.umn.edu/Components/winddirectionanddegrees.htm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "errors = pd.read_csv('../../../data/cleandata/Info pluviometricas/Merged Data/error_regions.csv', sep = ';')\n",
+    "errors[[c for c in errors.columns if 'Direcao' in c]].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_wind = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rv_ = reverse_mod(original_df[f'DirecaoDoVento_{selected_wind}'].values)\n",
+    "v_ = moving_average(rv_, window = 15)\n",
+    "v_ = np.mod(v_, 360)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure(layout=dict(template = 'plotly_dark'))\n",
+    "\n",
+    "fig.add_trace(go.Scatter(\n",
+    "x= list(range(len(rv_))),\n",
+    "y = rv_))\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure(layout=dict(template = 'plotly_dark'))\n",
+    "\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x = original_df['Data_Hora'],\n",
+    "    y = original_df[f'DirecaoDoVento_{selected_wind}'],\n",
+    "    name = f'DirecaoDoVento_{selected_wind}',\n",
+    "    line = dict(color = 'gray')),\n",
+    "             )\n",
+    "\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x = original_df['Data_Hora'],\n",
+    "    y = v_,\n",
+    "    name = 'Avg'),\n",
+    "             )\n",
+    "    \n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wind_direction = np.empty(v_.shape, dtype = np.object)\n",
+    "wind_direction[(v_ > 315 ) | (v_ <=  45 )] = 0 # North\n",
+    "wind_direction[(v_ >  45 ) & (v_ <= 135 )] = 1 # East\n",
+    "wind_direction[(v_ > 135 ) & (v_ <= 225 )] = 2 # South\n",
+    "wind_direction[(v_ > 225 ) & (v_ <= 315 )] = 3 # West"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = {0:'North', 1:'East', 2:'South', 3:'West'}\n",
+    "fig = go.Figure(layout=dict(template = 'plotly_dark'))\n",
+    "\n",
+    "for i in range(4):\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x = original_df['Data_Hora'],\n",
+    "        y = pd.Series(v_).where(wind_direction == i),\n",
+    "        name = name[i]),\n",
+    "                 )\n",
+    "    \n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_df['DirecaoDoVento'] = wind_direction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Has Rain"
    ]
   },
@@ -201,13 +325,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
     "sum_date = df[interest_cols + ['Date']].groupby('Date').sum()\n",
     "sum_date.columns = [c + '_sum' for c in sum_date.columns]\n",
     "\n",
-    "median_date = df[interest_cols + ['Date']].groupby('Date').median()\n",
-    "median_date.columns = [c + '_median' for c in median_date.columns]\n",
+    "# median_date = df[interest_cols + ['Date']].groupby('Date').median()\n",
+    "# median_date.columns = [c + '_median' for c in median_date.columns]\n",
     "\n",
     "mean_date = df[interest_cols + ['Date']].groupby('Date').mean()\n",
     "mean_date.columns = [c + '_mean' for c in mean_date.columns]\n",
@@ -215,8 +346,11 @@
     "min_date = df[interest_cols + ['Date']].groupby('Date').min()\n",
     "min_date.columns = [c + '_min' for c in min_date.columns]\n",
     "\n",
-    "max_date = df[interest_cols + ['Date']].groupby('Date').max()\n",
-    "max_date.columns = [c + '_max' for c in max_date.columns]\n"
+    "# max_date = df[interest_cols + ['Date']].groupby('Date').max()\n",
+    "# max_date.columns = [c + '_max' for c in max_date.columns]\n",
+    "\n",
+    "wind_direction_mode = df[['DirecaoDoVento','Date']].groupby('Date')\\\n",
+    "                        .apply(pd.DataFrame.mode).set_index('Date', drop = True)"
    ]
   },
   {
@@ -225,7 +359,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_date = pd.concat([df_date, sum_date, mean_date, median_date, min_date, max_date], axis = 1)\n",
+    "df_date = pd.concat([df_date, min_date, sum_date, mean_date, wind_direction_mode], axis = 1)\n",
+    "# df_date = pd.concat([df_date, sum_date, mean_date, median_date, min_date, max_date], axis = 1)\n",
     "df_date.head(2)"
    ]
   },
@@ -276,6 +411,121 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Make dynamic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h_cols = {'_'.join(c.split('_')[:-1]) for c in df_date.columns if '15H' in c}\n",
+    "\n",
+    "for c in h_cols:\n",
+    "    df_date[f'{c}_diff_15h9'] =  df_date[f'{c}_15H'] - df_date[f'{c}_9H']\n",
+    "    df_date[f'{c}_diff_21h3'] =  df_date[f'{c}_21H'] - df_date[f'{c}_3H']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for h in hours:\n",
+    "    drop_cols = [c for c in df_date.columns if f'{h}H' in c]\n",
+    "df_date = df_date.drop(columns =  drop_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_date.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seected_cols = [\n",
+    "                'Rain_Today',\n",
+    "                'Rain_Next_Day',\n",
+    "                'TemperaturaDoAr_min',\n",
+    "                'UmidadeRelativa_min',\n",
+    "                'PressaoAtmosferica_min',\n",
+    "                'PontoDeOrvalho_min',\n",
+    "                'RadiacaoSolar_min',\n",
+    "                'Precipitacao_min',\n",
+    "                'VelocidadeDoVento_min',\n",
+    "                'DirecaoDoVento_min',\n",
+    "                'Diff_Temp_POrvalho_min',\n",
+    "                'TemperaturaDoAr_sum',\n",
+    "                'UmidadeRelativa_sum',\n",
+    "                'PressaoAtmosferica_sum',\n",
+    "                'PontoDeOrvalho_sum',\n",
+    "                'RadiacaoSolar_sum', \n",
+    "                'Precipitacao_sum', \n",
+    "                'VelocidadeDoVento_sum',\n",
+    "                'DirecaoDoVento_sum', \n",
+    "                'Diff_Temp_POrvalho_sum', \n",
+    "                'TemperaturaDoAr_mean',\n",
+    "                'UmidadeRelativa_mean', \n",
+    "                'PressaoAtmosferica_mean',\n",
+    "                'PontoDeOrvalho_mean', \n",
+    "                'RadiacaoSolar_mean', \n",
+    "                'Precipitacao_mean',\n",
+    "                'VelocidadeDoVento_mean', \n",
+    "                'DirecaoDoVento_mean',\n",
+    "                'Diff_Temp_POrvalho_mean', \n",
+    "                'TemperaturaDoAr_diff_15h9',\n",
+    "                'TemperaturaDoAr_diff_21h3', \n",
+    "                'UmidadeRelativa_diff_15h9',\n",
+    "                'UmidadeRelativa_diff_21h3', \n",
+    "                'PressaoAtmosferica_diff_15h9',\n",
+    "                'PressaoAtmosferica_diff_21h3', \n",
+    "                'PontoDeOrvalho_diff_15h9',\n",
+    "                'PontoDeOrvalho_diff_21h3', \n",
+    "                'RadiacaoSolar_diff_15h9',\n",
+    "                'RadiacaoSolar_diff_21h3', \n",
+    "                'Diff_Temp_POrvalho_diff_15h9',\n",
+    "                'Diff_Temp_POrvalho_diff_21h3', \n",
+    "                'Precipitacao_diff_15h9',\n",
+    "                'Precipitacao_diff_21h3', \n",
+    "#                 'VelocidadeDoVento_diff_15h9',\n",
+    "#                 'VelocidadeDoVento_diff_21h3', \n",
+    "#                 'DirecaoDoVento_diff_15h9',\n",
+    "#                 'DirecaoDoVento_diff_21h3'\n",
+    "                ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_date = df_date.loc[:,selected_cols]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Seasonal Metrics"
    ]
   },
@@ -310,7 +560,7 @@
     "    \n",
     "    return season\n",
     "\n",
-    "df_date['season'] =  df_date.apply(get_season, axis = 1)"
+    "df_date['season'] =  df_date.apply(get_season, axis = 1)\n"
    ]
   },
   {
@@ -434,9 +684,9 @@
     "plt.colorbar()\n",
     "plt.show()\n",
     "\n",
-    "colorscale=[[0.0, \"rgb(240, 0, 0)\"],\n",
-    "            [0.3, \"rgb(240, 240, 239)\"],\n",
-    "            [1.0, 'rgb(240, 240, 240)']]\n",
+    "colorscale=[[1.0, \"rgb(240, 0, 0)\"],\n",
+    "            [0.6, \"rgb(240, 240, 239)\"],\n",
+    "            [0.0, 'rgb(240, 240, 240)']]\n",
     "\n",
     "fig = go.Figure()\n",
     "\n",
@@ -481,7 +731,7 @@
    "outputs": [],
    "source": [
     "remove_columns = remove_high_correlation(X_train, 0.7)\n",
-    "remove_columns += ['Precipitacao_min']"
+    "# remove_columns += ['Precipitacao_min']"
    ]
   },
   {
@@ -667,166 +917,6 @@
     "print('Accuracy: ', accuracy_score(*evaluate))\n",
     "print('Precision: ', precision_score(*evaluate))\n",
     "print('Recall: ', recall_score(*evaluate))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Include Wind Direction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "errors = pd.read_csv('../../../data/cleandata/Info pluviometricas/Merged Data/error_regions.csv', sep = ';')\n",
-    "errors[[c for c in errors.columns if 'Direcao' in c]].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected_wind = 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "v_ = reverse_mod(original_df[f'DirecaoDoVento_{selected_wind}'].values)\n",
-    "v_ = moving_average(v_, window = 15)\n",
-    "v_ = np.mod(v_, 360)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wind_direction = np.empty(v_.shape, dtype = np.int)\n",
-    "wind_direction[(v_ > 315 ) | (v_ <=  45 )] = 0 # North\n",
-    "wind_direction[(v_ >  45 ) & (v_ <= 135 )] = 1 # East\n",
-    "wind_direction[(v_ > 135 ) & (v_ <= 225 )] = 2 # South\n",
-    "wind_direction[(v_ > 225 ) & (v_ <= 315 )] = 3 # West\n",
-    "\n",
-    "original_df['DirecaoDoVento_cat'] = wind_direction\n",
-    "original_df['Date'] = pd.to_datetime(original_df['Date'], yearfirst=True)\n",
-    "\n",
-    "# Mode\n",
-    "wind_direction_mode = original_df[['DirecaoDoVento_cat','Date']].groupby('Date')\\\n",
-    "                        .apply(pd.DataFrame.mode).set_index('Date', drop = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = X.merge(wind_direction_mode, right_index=True, left_index=True)\n",
-    "dummies = pd.get_dummies(X['DirecaoDoVento_cat'], drop_first=True)\n",
-    "dummies.columns = [f'DirecaoDoVento_{i}' for i in range(len(dummies.columns))]\n",
-    "X = pd.concat([X, dummies], axis = 1 ).drop(columns = ['DirecaoDoVento_cat'])\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
-    "\n",
-    "remove_columns = remove_high_correlation(X_train, 0.7)\n",
-    "remove_columns += ['Precipitacao_min']\n",
-    "X_test_sel = X_test.drop(columns = remove_columns)\n",
-    "X_train_sel = X_train.drop(columns = remove_columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "param_hyperopt = {\n",
-    "    'max_depth':scope.int(hp.quniform('max_depth', 5, 30, 1)),\n",
-    "    'n_estimators':scope.int(hp.quniform('n_estimators', 5, 1000, 1)),\n",
-    "    'min_child_weight':  scope.int(hp.quniform('min_child_weight', 1, 8, 1)),\n",
-    "    'reg_lambda':hp.uniform('reg_lambda', 0.01, 500.0),\n",
-    "    'reg_alpha':hp.uniform('reg_alpha', 0.01, 500.0),\n",
-    "    'colsample_bytree':hp.uniform('colsample_bytree', 0.3, 1.0),\n",
-    "    'early_stopping_rounds':  scope.int(hp.quniform('early_stopping_rounds', 1, 20, 1)),\n",
-    "                 }\n",
-    "\n",
-    "def cost_function(params):\n",
-    "    \n",
-    "    fit_parameters = {}\n",
-    "    fit_parameters['early_stopping_rounds'] = params.pop('early_stopping_rounds')\n",
-    "\n",
-    "    clf = xgb.XGBClassifier(**params,\n",
-    "                            objective=\"binary:logistic\",\n",
-    "                            random_state=42)\n",
-    "\n",
-    "    clf.fit(X_train_sel, y_train, eval_set = eval_set, eval_metric=[\"logloss\"], verbose = False,**fit_parameters)\n",
-    "    y_pred = clf.predict(X_test_sel)\n",
-    "\n",
-    "    return {'loss':-fbeta_score(y_test, y_pred, beta=2),'status': STATUS_OK}\n",
-    "\n",
-    "num_eval = 250\n",
-    "eval_set = [(X_train_sel, y_train), (X_test_sel, y_test)]\n",
-    "\n",
-    "trials = Trials()\n",
-    "best_param = fmin(cost_function,\n",
-    "                     param_hyperopt,\n",
-    "                     algo=tpe.suggest,\n",
-    "                     max_evals=num_eval,\n",
-    "                     trials=trials,\n",
-    "                     rstate=np.random.RandomState(1))\n",
-    "\n",
-    "best_param['min_child_weight'] = int(best_param['min_child_weight'])\n",
-    "best_param['n_estimators'] = int(best_param['n_estimators'])\n",
-    "best_param['max_depth'] = int(best_param['max_depth'])\n",
-    "best_param['early_stopping_rounds'] = int(best_param['early_stopping_rounds'])\n",
-    "best_param"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params = best_param.copy()\n",
-    "\n",
-    "fit_parameters = {}\n",
-    "fit_parameters['early_stopping_rounds'] = params.pop('early_stopping_rounds')\n",
-    "\n",
-    "clf = xgb.XGBClassifier(**params,\n",
-    "                        objective=\"binary:logistic\",\n",
-    "                        random_state=42)\n",
-    "\n",
-    "clf.fit(X_train_sel, y_train, eval_set = eval_set, eval_metric=[\"logloss\"],\n",
-    "        verbose = False,**fit_parameters)\n",
-    "y_pred = clf.predict(X_test_sel)\n",
-    "y_pred_prob = clf.predict_proba(X_test_sel)\n",
-    "\n",
-    "plot_confusion_matrix(y_test, y_pred, ['0','1'])\n",
-    "evaluate = (y_test, y_pred)\n",
-    "print('f1_score: ', f1_score(*evaluate))\n",
-    "print('Accuracy: ', accuracy_score(*evaluate))\n",
-    "print('Precision: ', precision_score(*evaluate))\n",
-    "print('Recall: ', recall_score(*evaluate))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_precision_recall(y_test, y_pred_prob[:,1])"
    ]
   }
  ],
